--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
         <artifactId>mongo-java-driver</artifactId>
         <version>3.0.2</version>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-mongodb</artifactId>
+        <version>1.7.2.RELEASE</version>
+    </dependency>
 </dependencies>
  <build>
     <finalName>simtraffic</finalName>
